--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,29 +1,20 @@
 body {
     height: 100vh;
-    background-color: gray;
-    display: grid;
-    place-items: center;
+    background-color: hsl(215, 81%, 96%);
 }
 
 .form-container {
-    background-color: white;
     display: grid;
-}
-
-
-.error {
 
 }
 
-
-.error::after {
-    content: attr(data-error);
-    color: red;
+.background__border {
+    background-color: white;
+    background-size: cover;
+    width: 100vw;
+    height: 4.5rem;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
-
- .input-error {
-    border: 1px solid red;
-    outline: none;
-}
-
 
