--- a/src/components/ui/Footer.css
+++ b/src/components/ui/Footer.css
@@ -5,7 +5,6 @@
     display: grid;
     bottom: 0;
     margin-top: auto;
-
 }
 
 .form__plan__button-group {
@@ -13,12 +12,10 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 1rem
-
-
 }
 
 .form__plan__button-group button {
-    width:  25vw;
+    width: 25vw;
     height: 5vh;
     display: grid;
     place-items: center;
@@ -35,6 +32,11 @@
     color: hsl(248, 5%, 71%);
 }
 
+#button__go-back:hover {
+    cursor: pointer;
+    color: hsl(214, 46%, 20%);
+}
+
 #button__continue {
     background-color: hsl(214, 94%, 18%);
     color: white;
@@ -42,15 +44,53 @@
     border-radius: .25rem;
 }
 
+#button__continue:hover {
+    cursor: pointer;
+    background-color: hsl(215, 72%, 32%);
+}
+
 .button__solo {
     position: relative;
     right: -67vw
-
-
 }
-
 
 .button__hidden {
     display: none !important;
 }
 
+
+@media (min-width: 768px) {
+    .footer {
+        position: relative;
+        display: grid;
+        bottom: 5.75rem;
+        margin-top: auto;
+        background-color: revert;
+    }
+
+    #button__go-back {
+        border: none;
+        background-color: transparent;
+        color: hsl(248, 5%, 71%);
+        translate: 18.25rem;
+        font-size: 1.25rem;
+    }
+
+    .form__plan__button-group button {
+        width: 14vw;
+        height: 6vh;
+        display: grid;
+        place-items: center;
+    }
+
+    #button__continue {
+        border-radius: .5rem;
+        translate: -2.75rem
+    }
+
+    .button__solo {
+        position: relative;
+        left: 48rem;
+        right: revert;
+    }
+}
