--- a/src/components/pages/styles/PersonalInfo.css
+++ b/src/components/pages/styles/PersonalInfo.css
@@ -34,11 +34,20 @@
 
 .info-container input {
     padding: 0.375rem 1rem;
-    border-radius: 0.25rem;
+    border-radius: 0.5rem;
     border: 1px solid hsl(252, 7%, 86%);
     color: hsl(220, 1%, 44%);
     font-size: 1.125rem;
     display: block;
+    outline: none;
+}
+
+.info-container input:hover {
+    cursor: pointer;
+}
+
+.info-container input:focus {
+    border-color: hsl(245, 31%, 45%) !important;
 }
 
 
@@ -51,7 +60,7 @@
     display: block;
 }
 
-.input-error{
+.input-error {
     border: 1px solid hsl(352, 27%, 48%) !important;
     outline: none;
 }
@@ -66,6 +75,10 @@
     position: absolute;
     bottom: -10rem;
     right: 0;
+}
+
+@media (min-width: 768px) {
+
 }
 
 
