--- a/src/components/pages/styles/PersonalInfo.css
+++ b/src/components/pages/styles/PersonalInfo.css
@@ -36,7 +36,7 @@
     padding: 0.375rem 1rem;
     border-radius: 0.5rem;
     border: 1px solid hsl(252, 7%, 86%);
-    color: hsl(220, 1%, 44%);
+    color: hsl(214, 56%, 17%);
     font-size: 1.125rem;
     display: block;
     outline: none;
@@ -78,7 +78,36 @@
 }
 
 @media (min-width: 768px) {
+    .info-container {
+        width: 78%;
+        place-content: center;
+        transform: translateY(-5.75rem);
+        gap: 0;
+    }
 
+    .info-container h1 {
+        font-size: 2rem;
+        color: hsl(213, 100%, 16%);
+    }
+
+    .form-input-container {
+        margin-top: 1rem;
+    }
+
+    .info-container input {
+        padding: 0.635rem 1rem;
+        color: hsl(214, 56%, 17%);
+    }
+
+    .error::after {
+        content: attr(data-error);
+        color: hsl(350, 55%, 63%);
+        position: absolute;
+        right: 0;
+        top: -0.25rem;
+        display: block;
+        font-size: 1.125rem;
+    }
 }
 
 
