--- a/src/components/pages/styles/PersonalInfo.css
+++ b/src/components/pages/styles/PersonalInfo.css
@@ -81,8 +81,10 @@
     .info-container {
         width: 78%;
         place-content: center;
-        transform: translateY(-5.75rem);
+        transform: translateY(-4.935rem);
         gap: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .info-container h1 {
