--- a/src/components/pages/styles/Addons.css
+++ b/src/components/pages/styles/Addons.css
@@ -26,8 +26,8 @@
     place-items: start;
     gap: .75rem;
     margin-top: 1rem;
-}
 
+}
 
 
 .addon__group__item {
@@ -38,6 +38,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: 0.25fr 5fr 1fr;
+    border-radius: 0.5rem;
 }
 
 .addon__group__item:hover {
@@ -51,6 +52,7 @@
 
 .addon__group__item input {
     scale: 150%;
+
 }
 
 .addon-container input[type='checkbox'] {
@@ -71,4 +73,53 @@
     color: hsl(240, 5%, 68%);
 }
 
+.price {
+    color: hsl(242, 32%, 49%);
+}
+
+@media (min-width: 768px) {
+    .addon-container {
+        display: revert;
+        max-width: 450px;
+        width: 100%;
+        place-content: center;
+        transform: translateY(2.25rem);
+        background-color: transparent;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0;
+    }
+
+    .addon__header {
+        font-size: 2rem;
+        color: hsl(213, 100%, 16%);
+    }
+
+    .addon__group-container {
+        margin-top: 2rem;
+        gap: 1rem;
+    }
+
+    .addon__group__item__subgroup {
+        line-height: 1.3;
+        margin-left: 0.25rem;
+    }
+
+    .addon__group__item {
+        gap: 1rem;
+        border: 1px solid hsl(240, 3%, 86%);
+        padding: 1.125rem 1.25rem;
+    }
+
+    .addon__group__item__subgroup h3 {
+        font-size: 1.125rem;
+    }
+
+    .addon__group__item__subgroup p {
+        font-size: 1rem;
+        color: hsl(240, 5%, 68%);
+    }
+
+
+}
 
