--- a/src/components/pages/styles/Summary.css
+++ b/src/components/pages/styles/Summary.css
@@ -43,6 +43,10 @@
     color: hsl(246, 30%, 52%) !important;
 }
 
+.summary__content-price {
+    font-size: 1.125rem;
+}
+
 .summary_content__plan-group {
     display: flex;
     justify-content: space-between;
@@ -73,7 +77,6 @@
 }
 
 
-
 hr {
     height: 1px;
     border: none;
@@ -96,4 +99,45 @@ hr {
 .summary__content__total-price {
     color: hsl(244, 66%, 56%);
     font-size: 1.125rem;
+}
+
+@media (min-width: 768px) {
+    .summary-container {
+        display: revert;
+        max-width: 450px;
+        width: 100%;
+        place-content: center;
+        transform: translateY(2.25rem);
+        background-color: transparent;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0;
+    }
+
+    .summary__header {
+        font-size: 2rem;
+        color: hsl(213, 100%, 16%);
+        line-height: 1;
+    }
+
+    .summary__subheader {
+        margin-top: 0.5rem;
+    }
+
+    .summary__content-header {
+        font-size: 1.125rem;
+    }
+
+    .summary__content-container {
+        display: grid;
+        gap: 1rem;
+        margin-top: 2rem;
+        padding: 1rem 1rem;
+        border-radius: .5rem;
+        background-color: hsl(230, 75%, 98%);
+    }
+    .summary__content__total-price {
+        font-size: 1.25rem;
+    }
+
 }
