--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,10 +1,20 @@
+#root {
+    min-height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
-    height: 100vh;
+    min-height: 100vh;
     background-color: hsl(215, 81%, 96%);
+    display: flex;
+    flex-direction: column;
 }
 
 .form-container {
     display: grid;
+    min-height: 80vh;
 
 }
 
@@ -16,5 +26,40 @@ body {
     position: absolute;
     bottom: 0;
     z-index: -1;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    #root {
+        min-height: 100vh;
+        position: relative;
+        display: grid;
+        place-content: center;
+    }
+
+    .form-container {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-template-areas:
+        "navigation main-container";
+        background-color: white;
+        max-width: 942px;
+        max-height: 600px;
+        width: 100%;
+        height: 600px;
+        min-height: revert;
+        padding: 1rem;
+        border-radius: 0.5rem;
+    }
+
+    .main-container {
+        display: grid;
+        grid-area: main-container;
+        translate: 0.5rem;
+    }
+
 }
 
