--- a/src/components/pages/styles/Addons.css
+++ b/src/components/pages/styles/Addons.css
@@ -16,8 +16,9 @@
 }
 
 .addon__subheader {
-    font-size: 1.125rem;
-    color: hsl(230, 7%, 84%);
+    font-size: 1rem;
+    color: hsl(230, 3%, 60%);
+    font-weight: lighter;
 }
 
 .addon__group-container {
