--- a/src/components/pages/styles/PersonalInfo.css
+++ b/src/components/pages/styles/PersonalInfo.css
@@ -8,7 +8,6 @@
     transform: translateY(-4.635rem);
     border-radius: 0.5rem;
     padding: 2rem 1.5rem;
-    gap: 0.75rem;
 
 }
 
@@ -18,8 +17,9 @@
 }
 
 .info-container p {
-    font-size: 1.125rem;
-    color: hsl(230, 3%, 65%);
+    font-size: 1rem;
+    color: hsl(230, 3%, 60%);
+    line-height: 1.4;
 }
 
 .form-input-container {
@@ -37,9 +37,10 @@
     border-radius: 0.5rem;
     border: 1px solid hsl(252, 7%, 86%);
     color: hsl(214, 56%, 17%);
-    font-size: 1.125rem;
+    font-size: 1rem;
     display: block;
     outline: none;
+    font-family: Ubuntu-medium, sans-serif;
 }
 
 .info-container input:hover {
@@ -90,6 +91,10 @@
     .info-container h1 {
         font-size: 2rem;
         color: hsl(213, 100%, 16%);
+    }
+
+    .info__paragraph {
+        font-size: 1rem !important;
     }
 
     .form-input-container {
