--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+
 }
 
 body {
@@ -10,6 +11,7 @@ body {
     background-color: hsl(215, 81%, 96%);
     display: flex;
     flex-direction: column;
+    font-family: 'Ubuntu-regular', sans-serif;
 }
 
 .form-container {
@@ -38,6 +40,7 @@ button:hover {
         position: relative;
         display: grid;
         place-content: center;
+
     }
 
     .form-container {
@@ -53,6 +56,7 @@ button:hover {
         min-height: revert;
         padding: 1rem;
         border-radius: 0.5rem;
+
     }
 
     .main-container {
