fix: navigation bold

--- a/src/components/ui/NavigationSummary.css
+++ b/src/components/ui/NavigationSummary.css
@@ -119,7 +119,7 @@ ul, li {
     }
 
     .form__navigation__list__item__paragraph {
-        font-family: Ubuntu-medium, sans-serif;
+        font-family: Ubuntu-bold, sans-serif;
     }
 
 
